tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetTypes_Null.bsl

EVIL_PROVIDER_GetTypes_Null.fsx(2,1,2,46): parse error FS3051: The type provider 'Provider.EvilProviderWhereGetTypesReturnsNull' reported an error: The type provider returned 'null', which is not a valid return value from 'GetTypes'

EVIL_PROVIDER_GetTypes_Null.fsx(2,1,2,46): parse error FS3020: One or more errors seen during provided type setup
