tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetTypes_Null.fsx

#r "provider_EVIL_PROVIDER_GetTypes_Null.dll"

open FSharp.EvilProviderWhereGetTypesReturnsNull
